use pwrite64() instead of pwrite() when writing to file

The offset param for File::Write() is int64_t.
However, pwrite() takes a signed integer for offset.
As a result, File::Write() will not work for offset larger than 2GB.
Change to pwrite64() so it will work on 32bit builds.

BUG=739587

Change-Id: I357488b95cd6c501a9f9547ff220f86ef069dc3b